--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "morgan": "^1.10.0",
+    "sqlite3": "^5.0.0",
     "tv4": "^1.3.0",
     "uuid": "^8.3.1"
   },
