--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "tv4": "^1.3.0",
+    "util": "^0.12.3",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
