--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "tv4": "^1.3.0",
-    "util": "^0.12.3",
-    "uuid": "^8.3.1"
+    "util": "^0.12.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
